fix: 2 img collage overflow

--- a/src/styles/systems.css
+++ b/src/styles/systems.css
@@ -138,12 +138,15 @@
 
     display: grid;
     grid-template-columns: 6fr 4fr;
+    grid-template-rows: 1fr;
+
     gap: 1vw;
 }
 
-.collage-2-right > *{
+.collage-2-right > * {
     width: 100%;
     height: 100%;
+    min-height: 0; 
 
     object-fit: cover;
 }
@@ -154,12 +157,15 @@
 
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+
     gap: 1vw;
 }
 
 .collage-2-center > *{
     width: 100%;
     height: 100%;
+    min-height: 0; 
 
     object-fit: cover;
 }
@@ -170,12 +176,15 @@
 
     display: grid;
     grid-template-columns: 4fr 6fr;
+    grid-template-rows: 1fr;
+
     gap: 1vw;
 }
 
 .collage-2-left > *{
     width: 100%;
     height: 100%;
+    min-height: 0; 
 
     object-fit: cover;
 }
